# LogIntelligence

./: CLAUDE.md  CONSTITUTION.md  README.md  config.yaml  data-model.md  plan.md  pyproject.toml  requirements.txt  research.md  spec.md  task.md
contracts/: cli-schema.md
data/chroma/: chroma.sqlite3
logiq/chain/: prompt.py  rag_chain.py
logiq/cli/: main.py
logiq/config/: settings.py
logiq/ingestion/: loader.py  parser.py
logiq/retrieval/: retriever.py
logiq/vectorstore/: client.py  embedder.py  store.py
tests/: conftest.py  test_parser.py  test_rag_chain.py  test_retriever.py  test_store.py
